--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,38 +1,29 @@
-# For documentation on this file, see:
-# https://github.com/riggraz/no-style-please#customize-the-menu
-
 entries:
-  - title: info
+  - title: yazar hakkında
+    bold: true
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: bilgisayar mühendisi, software developer olarak çalışmakta
+      - title: "iletişim: <a href='mailto:sibervepunk@gmail.com'>sibervepunk@gmail.com </a> | <a href='https://twitter.com/sibervepunk' target='_blank'>twitter</a>"
 
-  - title: all posts
+  - title: yazılar
+    bold: true
     post_list:
-      limit: 5
+      limit: 10
       show_more: true
-      show_more_text: See archive...
+      show_more_text: Devamını gör
       show_more_url: archive.html
 
-  - title: posts by category
-    post_list:
-      category: example2
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: example2-archive.html
+  # - title: tavsiye yazıları
+  #   post_list:
+  #     category: tavsiye
+  #     show_more: true
+  #     show_more_text: See more posts...
+  #     show_more_url: example2-archive.html
 
-  - title: rss
-    url: feed.xml
-  
-  - title: another list
-    entries:
-      - title: with subitems
-        entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
-    entries:
-      - title: to edit this menu, edit _data/menu.yml file
+  # - title: teknik yazılar
+  #   entries:
+  #     - title: with subitems
+  #       entries:
+  #         - title: with subsubitems
+  #         - title: example page
+  #           url: about
