add en & theme swticher

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ goat_counter: "sibervepunk" # put your GoatCounter name if you want to use GoatC
 remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "auto" # can be "light", "dark" or "auto"
+  appearance: "light" # can be "light", "dark" or "auto"
   back_home_text: "home" # customize text for homepage link in post layout
   date_format: "%d-%m-%Y" # customize how date is formatted
   show_description: true # show blog description in home page
