--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ remote_theme: riggraz/no-style-please
 
 theme_config:
   appearance: "light" # can be "light", "dark" or "auto"
-  back_home_text: "home" # customize text for homepage link in post layout
-  date_format: "%d-%m-%Y" # customize how date is formatted
+  back_home_text: "anasayfa" # customize text for homepage link in post layout
+  date_format: "%d.%m.%Y" # customize how date is formatted
   show_description: true # show blog description in home page
   email: "sibervepunk@gmail.com"
   twitter: "https://twitter.com/sibervepunk"
