--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,7 +4,7 @@ entries:
     entries:
       - title: bilgisayar mühendisiyim, hem siber hem punk konulara meraklıyım
       - title: "iletişim: <a href='mailto:sibervepunk@gmail.com'>sibervepunk@gmail.com </a> | <a href='https://twitter.com/sibervepunk' target='_blank'>twitter</a>"
-      - title: punk kısım
+      - title: punk konular
         url: "https://iyidenemeydimontaigne.blogspot.com/"
 
   - title: yazılar
