chore: Update language and fix layout issues

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ remote_theme: riggraz/no-style-please
 theme_config:
   appearance: "light" # can be "light", "dark" or "auto"
   back_home_text: "anasayfa" # customize text for homepage link in post layout
+  en_back_home_text : "home" # customize text for homepage link in post layout
   date_format: "%d.%m.%Y" # customize how date is formatted
   show_description: false # show blog description in home page
   email: "sibervepunk@gmail.com"
